--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-essentials": "^6.4.17",
     "@storybook/addon-links": "^6.4.17",
     "@storybook/react": "^6.4.17",
+    "@types/aos": "^3.0.4",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
