--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.26.0",
     "classnames": "^2.3.1",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.9.1",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
@@ -23,6 +28,7 @@
     "@storybook/addon-links": "^6.4.18",
     "@storybook/react": "^6.4.18",
     "@types/aos": "^3.0.4",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
